BE-0034 Finished GetGameAnalytics endpoint